add property_name to calendar view, change response type
