# model/view.go
@@ -101,21 +101,22 @@ func (PropertyView) TableName() string {
 }
 
 type CalendarView struct {
-	ID         string     `json:"id"`
-	CompanyID  string     `json:"companyId"`
-	PropertyID string     `json:"propertyId"`
-	Name       string     `json:"name"`
-	StartDt    time.Time  `json:"startDt"`
-	EndDt      time.Time  `json:"endDt"`
-	CreateBy   string     `json:"createBy"`
-	CreateDt   time.Time  `json:"createDt"`
-	UpdateBy   string     `json:"updateBy"`
-	UpdateDt   time.Time  `json:"updateDt"`
-	DeleteBy   string     `json:"deleteBy"`
-	DeleteDt   *time.Time `json:"deleteDt"`
-	CreateName string     `json:"createName"`
-	UpdateName string     `json:"updateName"`
-	DeleteName string     `json:"deleteName"`
+	ID           string     `json:"id"`
+	CompanyID    string     `json:"companyId"`
+	PropertyID   string     `json:"propertyId"`
+	Name         string     `json:"name"`
+	StartDt      time.Time  `json:"startDt"`
+	EndDt        time.Time  `json:"endDt"`
+	CreateBy     string     `json:"createBy"`
+	CreateDt     time.Time  `json:"createDt"`
+	UpdateBy     string     `json:"updateBy"`
+	UpdateDt     time.Time  `json:"updateDt"`
+	DeleteBy     string     `json:"deleteBy"`
+	DeleteDt     *time.Time `json:"deleteDt"`
+	PropertyName string     `json:"propertyName"`
+	CreateName   string     `json:"createName"`
+	UpdateName   string     `json:"updateName"`
+	DeleteName   string     `json:"deleteName"`
 }
 
 func (CalendarView) TableName() string {
