# response/property.go
@@ -2,4 +2,5 @@ package response
 
 import "github.com/jihanlugas/rental/model"
 
+type Property model.PropertyView
 type PageProperty []model.PropertyView
